# mypackage

./: README.md  pyproject.toml  setup.cfg  setup.py
